#FIND_PACKAGE(libudev)
include (FindPkgConfig)
pkg_check_modules(LIBUDEV "libudev")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
IF ( ${LIBUDEV_FOUND} )
    ADD_EXECUTABLE(udev_list udev.c)
    TARGET_LINK_LIBRARIES(udev_list ${LIBUDEV_LIBRARIES})
    ADD_EXECUTABLE(udev_mon udev_mon.c)
    TARGET_LINK_LIBRARIES(udev_mon ${LIBUDEV_LIBRARIES})
    ADD_EXECUTABLE(udev_graphics udev_graphics.c)
    TARGET_LINK_LIBRARIES(udev_graphics ${LIBUDEV_LIBRARIES})
    ADD_EXECUTABLE(udev_input udev_input.c)
    TARGET_LINK_LIBRARIES(udev_input ${LIBUDEV_LIBRARIES})
ELSE ( ${LIBUDEV_FOUND} )
  MESSAGE (WARNING "Libudev not found")
ENDIF ( ${LIBUDEV_FOUND} )
